Jonas - Review af rapport

--- a/Project/Report/sections/Diskussion/Diskussion.tex
+++ b/Project/Report/sections/Diskussion/Diskussion.tex
@@ -7,7 +7,7 @@ Dog er der i den valgte løsning visse fejlkilder som kan optræde. Da det er be
 
 Et andet problem er manglen på check af om klodsen bliver samlet op. For den nuværende implementering vil det betyde at når robotten er færdig med udførslen af sin opgave, retunerer den til udgangspunktet og starter forfra. Det betyder at den vil tage et nyt billede og finde den samme klods, som den så vil forsøge at sortere. Dette problem kan løses på flere forskellige måder. Én måde ville være at anvende en sensor, fx. en tryksensor. På den måde vil systemet få feedback på om den bestemte klods er blevet samlet op. En anden måde ville være at kigge på motorerenes belastning. Da en øget belastning på motorerne må betyde at en klods er blevet samlet op.\\
 
-Det er også set under test at billedbehandlingen. Alt afhængigt at farve, at det kan være svære/nemmere at detektere den korrekte farve. Ligeledes er det set at ikke alle klodser bliver detekteret. \fixme{Rasmus, noget om hvorfor det kan være at den ikke ser klodsen. lysforhold?} Som en løsning på problemet vil det være muligt at indskærme robottens arbejdsområde og tilføre en kendt lyskilde. På den måde opnåes de optimale forhold for at billedet ikke bliver påvirket af udefrakommende faktorer. Dette vil også gøre hjørneidentificeringen bliver meget præcis og derved er det sikret at de vinkler som bliver fundet i \textbf{block} klassen er de helt korrekte.\\
+Det er også set under test at billedbehandlingen. Alt afhængigt af farve, at det kan være svære at detektere den korrekte farve, hvis farven ligger tæt på hinanden i nuancer. Ligeledes er det set at ikke alle klodser bliver detekteret. \fixme{Rasmus, noget om hvorfor det kan være at den ikke ser klodsen. lysforhold?} Som en løsning på problemet vil det være muligt at indskærme robottens arbejdsområde og tilføre en kendt lyskilde. På den måde opnåes de optimale forhold for at billedet ikke bliver påvirket af udefrakommende faktorer. Dette vil også gøre hjørneidentificeringen bliver meget præcis og derved er det sikret at de vinkler som bliver fundet i \textbf{block} klassen er de helt korrekte.\\
 
 Bedre kameramodel - transformationen mellem billede og bord er ikke lineær.\\ \fixme{Jeg ved desværre ikke så meget om dette(kameramodellen)}
 
