--- a/Project/Report/sections/Introduktion/CrustCrawler.tex
+++ b/Project/Report/sections/Introduktion/CrustCrawler.tex
@@ -2,7 +2,7 @@
 \subsection{Crust Crawler} % (fold)
 \label{sub:crust_crawler}
 
-AX-12A Smart Robotic Arm er den robot, som universitetet har stillet til rådighed til dette projekt. Robotten er designet som en arm med en baserotation, en skulderrotation, en underarmsrotation samt en håndledsrotation. Desuden er der monteret en gripper for enden af armen, som gør det muligt at samle ting op. Et billede af robotten ses på \autoref{fig:crustcrawler}. Som det ses på billedet kan et led mellem baserotationen og skulderrotationen sættes fast i en anden position end lige op. \\
+AX-12A Smart Robotic Arm er den robot, som universitetet har stillet til rådighed til dette projekt. Robotten er designet som en arm med en baserotation, en skulderrotation, en underarmsrotation samt en håndledsrotation. Desuden er der monteret en gripper for enden af armen, som gør det muligt at samle ting op. Et billede af robotten ses på figur \ref{fig:crustcrawler}. Som det ses på billedet kan et led mellem baserotationen og skulderrotationen sættes fast i en anden position end lige op. \\
 
 \fixme{Ændre 'Figure' til 'Figur'}
 
