--- a/Project/Report/sections/Introduktion/Purpose.tex
+++ b/Project/Report/sections/Introduktion/Purpose.tex
@@ -20,7 +20,7 @@ Systemet skal blot kunne håndtere to forskellige farver. \\
 \label{fig:purpose}
 \end{figure}
 
-En idé til system setup er illustreret i \autoref{fig:purpose}.
+En idé til system setup er illustreret på figur \ref{fig:purpose}.
 Her ses robotten som den blå figur i midten. De grønne og gule kvadrater er de farvede klodser, som systemet skal kunne sortere. 
 De farvede og firkantede omrids i siderne er de steder, hvor klodserne skal grupperes efter farve igennem sorteringen.
 Disse markeringer forekommer kun på illustrationen og vil ikke være at finde i det endelige system. \\
