--- a/Project/Report/sections/Systembeskrivelse/Hardware.tex
+++ b/Project/Report/sections/Systembeskrivelse/Hardware.tex
@@ -18,10 +18,8 @@ I dette afsnit vil hver af disse hardware komponenter blive beskrevet.
 \subsubsection{Robot} % (fold)
 \label{subsub:robot}
 
-\fixme{Ændre 'section' til 'afsnit'}
-
 Systemet anvender en robotarm til at flytte klodserne fra bordets midte til den side, hvor klodsen er blevet sorteret til.
-Robotten, som anvendes i systemet, er den i \autoref{sub:crust_crawler} allerede beskrevne AX-12A Smart Robotic Arm fra CrustCrawler Robotics.
+Robotten, som anvendes i systemet, er den i afsnit \ref{sub:crust_crawler} allerede beskrevne AX-12A Smart Robotic Arm fra CrustCrawler Robotics.
 Robotten styres fra systemets laptop ved at tildele de enkelte joints (rotationsled) en vinkel, som de så indstiller sig til.
 
 % subsubsection robot (end)
