--- a/Project/Report/sections/Konklusion/Konklusion.tex
+++ b/Project/Report/sections/Konklusion/Konklusion.tex
@@ -1,3 +1,10 @@
 %!TEX root = ../../Master.tex
 \clearpage
-\section{Konklusion}
+\section{Konklusion} % (fold)
+\label{sec:konklusion}
+
+Det er lykkedes at implementere et program ved hjælp af ROS, som kan få en robot til at sortere et antal klodser efter farve. Systemet har et acceptabelt antal af fejl og der er blevet diskuteret, hvilke tiltag der kunne tages, for at løse disse. \\
+
+Processen har indebåret at anvende viden fra undervisningen i kurset ITROB1, men det har også været nødvendigt at tilegne os ny viden omkring bl.a. metoder til brug i billedbehandslingsdelen af projektet og syntax for programmeringssproget Python. \\
+
+% section konklusion (end)
