--- a/Project/Report/sections/Diskussion/Diskussion.tex
+++ b/Project/Report/sections/Diskussion/Diskussion.tex
@@ -1,16 +1,14 @@
 %!TEX root = ../../Master.tex
 \clearpage
 \section{Diskussion}
-Det designede system har vist at det koncept som er forsøgt udviklet er muligt. Systemet er i stand til at tage et billede, registrere objekterne på bordet og afgøre om det er klodser som skal sorteres. Derefter er det i stand til at navigere til centrum af klodsen, rotere sin gripper og samle klodsen op, for derefter at sortere den i den specificerede side.\\
+Det designede system har vist at det koncept som er forsøgt udviklet er muligt. Systemet er i stand til at tage et billede, registrere objekterne på bordet og afgøre om det er klodser som skal sorteres. Derefter er det i stand til at navigere til centrum af klodsen, rotere sin gripper og samle klodsen op, for derefter at sortere den til den specificerede side.\\
 
-Dog er der i den valgte løsning visse fejlkilder som kan optræde. Da det er besluttet at der altid startes med at tage et billede af bordet og der derefter foretages billedbehandling betyder det at systemet er meget følsom over for ændringer i klods positioner efter billedet er taget. Som en løsning på det ville det være muligt at vælge en løsning hvor der tages billede efter hver sorteret klods. Dette vil gøre udførselstiden for opgaven betydeligt længere, men løbende ændringer vil nu være mulige at detektere.\\ 
+Dog er der i den valgte løsning visse fejlkilder, som kan optræde. Da det er besluttet at der altid startes med at tage et billede af bordet og der derefter foretages billedbehandling betyder det, at systemet er meget følsomt over for ændringer i klods positioner efter billedet er taget. Som en løsning på dette kunne man vælge en løsning, hvor der tages et nyt billede efter hver sorteret klods. Dette vil gøre udførselstiden for opgaven betydeligt længere, men løbende ændringer ville da være mulige at detektere.\\ 
 
 Et andet problem er manglen på check af om klodsen bliver samlet op. For den nuværende implementering vil det betyde at når robotten er færdig med udførslen af sin opgave, retunerer den til udgangspunktet og starter forfra. Det betyder at den vil tage et nyt billede og finde den samme klods, som den så vil forsøge at sortere. Dette problem kan løses på flere forskellige måder. Én måde ville være at anvende en sensor, fx. en tryksensor. På den måde vil systemet få feedback på om den bestemte klods er blevet samlet op. En anden måde ville være at kigge på motorerenes belastning. Da en øget belastning på motorerne må betyde at en klods er blevet samlet op.\\
 
-Det er også set under test at billedbehandlingen. Alt afhængigt af farve, at det kan være svære at detektere den korrekte farve, hvis farven ligger tæt på hinanden i nuancer. Ligeledes er det set at ikke alle klodser bliver detekteret.
-Det skyldes at edge detectoren nogle gange laver store huller i den detekterede kant. Hvilket ikke bliver lukket ordenligt at closing transformationen, og derfor bliver der ikke tegnet en kontur.
-Som en løsning på problemet vil det være muligt at indskærme robottens arbejdsområde og tilføre en kendt lyskilde, så belysningen altid er den samme. På den måde opnåes de optimale forhold for at billedet ikke bliver påvirket af udefrakommende faktorer. Dette vil også gøre hjørneidentificeringen bliver meget præcis og derved er det sikret at de vinkler som bliver fundet i \textbf{block} klassen er de helt korrekte.\\
+Der er også observeret fejl i billedbehandlingen. Dette gælder fejl ved sammenligning af farver, som nogen gange gør at to forskellige farver ses som den samme. Det er heller ikke altid at alle klodser detekteres. Dette skyldes at edge detectoren nogle gange laver store huller i den detekterede kant, hvorfor closing transformationen ikke kan lukke hullerne ordentlig, og derfor bliver der ikke tegnet en kontur. Som en løsning på problemet vil det være muligt at indskærme robottens arbejdsområde og tilføre en kendt lyskilde, så belysningen altid er den samme. På den måde opnåes de optimale forhold for at billedet ikke bliver påvirket af udefrakommende faktorer. Dette vil også gøre at hjørneidentificeringen bliver mere præcis og derved er det sikret at de vinkler som bliver fundet i \textbf{block} klassen er de korrekte.\\
 
-Bedre kameramodel - transformationen mellem billede og bord er ikke lineær.\\ \fixme{Jeg ved desværre ikke så meget om dette(kameramodellen)}
+Der er en usikkerhed i præcissionen når robotten skal ramme en klods. Dette kan skyldes at koordinatet for klodsen findes på billedets koordinatsæt. Det er valgt at arbejde med at forholdet mellem pixels i billedet og centimeter på bordet er lineært for hele bordet. Hvis en større præcission skulle opnås, ville en bedre kameramodel muligvis kunne hjælpe på dette.\\
 
 Det er set ved brug og test af systemet at robotten har en tendens til at bevæge sig i ryk. Dette kan skyldes at den interne reguleringssløje der styrer motorerne ikke er fintunet til denne specifikke opgave. Det betyder at der er en usikkerhed i robotarmens position. Det ville være muligt at forsøge at fintune den, men det valgt ikke at bruge tid på det da robotten i de fleste tilfælde rammer den bestemte position.\\
